--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -20,7 +20,7 @@
 hr{
     padding: 2px 0;
     border: none;
-    background-color: rgb(250, 150, 0);
+    background-color:#86E7FD;
     
 }
 
@@ -38,7 +38,8 @@ hr{
 }
 
 .line-color-change{
-    background-color: rgb(0, 150, 250);
+    background-color:#86E7FD;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .fadeOut{
@@ -52,4 +53,12 @@ hr{
     opacity:1;
     transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
 
+}
+.Square{
+    height:auto; 
+    width:auto;
+    background-color: #86E7FD;
+    padding:3px; 
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
