--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -24,6 +24,13 @@ hr{
     
 }
 
+.header-website{
+    background-image: url(../img/BackgroundHeader.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    padding-bottom: 270px;
+}
 
 .trans--grow{
     -webkit-transition: all 0.5s ease-in-out; /* For Safari 3.1 to 6.0 */
