--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -515,9 +515,6 @@ video {
 .mr-2{
 	margin-right: 0.5rem;
 }
-.block{
-	display: block;
-}
 .flex{
 	display: flex;
 }
@@ -530,14 +527,11 @@ video {
 .h-6{
 	height: 1.5rem;
 }
-.w-96{
-	width: 24rem;
-}
-.w-48{
-	width: 12rem;
-}
 .w-6{
 	width: 1.5rem;
+}
+.w-96{
+	width: 24rem;
 }
 .max-w-6xl{
 	max-width: 72rem;
@@ -560,21 +554,15 @@ video {
 .gap-8{
 	gap: 2rem;
 }
-.space-x-7 > :not([hidden]) ~ :not([hidden]){
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
-	margin-right: calc(1.75rem * var(--tw-space-x-reverse));
-	margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
+	margin-right: calc(1rem * var(--tw-space-x-reverse));
+	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-3 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.rounded{
-	border-radius: 0.25rem;
-}
-.rounded-full{
-	border-radius: 9999px;
 }
 .border-t{
 	border-top-width: 1px;
@@ -587,17 +575,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
-.px-4{
-	padding-left: 1rem;
-	padding-right: 1rem;
+.bg-white{
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 .py-10{
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
-}
-.px-32{
-	padding-left: 8rem;
-	padding-right: 8rem;
 }
 .py-6{
 	padding-top: 1.5rem;
@@ -607,6 +591,10 @@ video {
 	padding-left: 4rem;
 	padding-right: 4rem;
 }
+.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
 .py-4{
 	padding-top: 1rem;
 	padding-bottom: 1rem;
@@ -615,32 +603,37 @@ video {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }
+.px-3{
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
 .pt-32{
 	padding-top: 8rem;
-}
-.pt-5{
-	padding-top: 1.25rem;
 }
 .text-center{
 	text-align: center;
 }
-.text-4xl{
-	font-size: 2.25rem;
-	line-height: 2.5rem;
+.text-3xl{
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-xl{
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.font-semibold{
-	font-weight: 600;
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .font-light{
 	font-weight: 300;
 }
-.text-red-700{
+.font-semibold{
+	font-weight: 600;
+}
+.text-primary{
 	--tw-text-opacity: 1;
-	color: rgba(185, 28, 28, var(--tw-text-opacity));
+	color: rgba(0, 64, 255, var(--tw-text-opacity));
 }
 .text-white{
 	--tw-text-opacity: 1;
@@ -2192,16 +2185,47 @@ video {
 .lg\:justify-start{justify-content:flex-start}
 .lg\:px-36{padding-left:9rem;padding-right:9rem}
 .lg\:text-left{text-align:left}}
+span{
+font-family: 'Poppins-Bold',arial, sans-serif;
+
+}
 hr{
     padding: 2px 0;
     border: none;
     background-color:#86E7FD;
     
 }
+.Button{
+    width:200px;
+    background-color:#86E7FD;
+    text-decoration: none !important;
+    border: none !important;
+    height:50px;
+    font-family: 'Poppins-Bold','arial', 'sans-serif'; 
+    border-radius: 8px;
+    outline-color: none !important;
+    outline: none !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.ButtonText{
+color:#0040FF;
+}
+.Button:hover{
+   background-color:#B6E6F1;
+
+}
+.HeaderTextButton{
+    margin-left: 70px;
+    
+}
+.NavigationBar{
+    margin-bottom: -100px;
+}
 .header-website{
     background-image: url(../img/BackgroundHeader.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    height:800px;
     background-position: bottom;
     padding-bottom: 270px;
 }
@@ -2238,22 +2262,30 @@ hr{
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
+@font-face{
+    font-family:'Poppins-Bold';
+    src:url('./../Font/Poppins-Bold.ttf') format('truetype');
+    font-family:'Poppins-BoldItalic';
+    src: url('./../Font/Poppins-BoldItalic.ttf') format('truetype');
+    font-family:'Poppins-Medium';
+    src: url('./../Font/Poppins-Medium.ttf') format('truetype');
+    font-family:'Poppins-MediumItalic';
+    src: url('./../Font/Poppins-MediumItalic.ttf') format('truetype');
+    font-family:'Poppins-Regular';
+    src: url('./../Font/Poppins-Regular.ttf') format('truetype');
+    font-family:'Poppins-SemiBold';
+    src: url('./../Font/Poppins-SemiBold.ttf') format('truetype');
+    }
 .hover\:text-primary:hover{
 	--tw-text-opacity: 1;
 	color: rgba(0, 64, 255, var(--tw-text-opacity));
 }
 @media (min-width: 768px){
-	.md\:ml-64{
-		margin-left: 16rem;
-	}
 	.md\:flex{
 		display: flex;
 	}
 	.md\:hidden{
 		display: none;
-	}
-	.md\:grid-cols-1{
-		grid-template-columns: repeat(1, minmax(0, 1fr));
 	}
 	.md\:grid-cols-2{
 		grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2263,4 +2295,4 @@ hr{
 	.lg\:flex-row{
 		flex-direction: row;
 	}
-}
+} 
