--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -632,8 +632,9 @@ video {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
-.pl-10{
-	padding-left: 2.5rem;
+.px-20{
+	padding-left: 5rem;
+	padding-right: 5rem;
 }
 .pt-10{
 	padding-top: 2.5rem;
@@ -653,36 +654,47 @@ video {
 .pt-5{
 	padding-top: 1.25rem;
 }
+.pt-20{
+	padding-top: 5rem;
+}
 .text-left{
 	text-align: left;
 }
 .text-center{
 	text-align: center;
 }
-.text-5xl{
-	font-size: 3rem;
-	line-height: 1;
-}
 .text-xl{
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-3xl{
-	font-size: 1.875rem;
-	line-height: 2.25rem;
+.text-5xl{
+	font-size: 3rem;
+	line-height: 1;
 }
 .text-7xl{
 	font-size: 4.5rem;
 	line-height: 1;
 }
-.font-bold{
-	font-weight: 700;
+.text-3xl{
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+.text-2xl{
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 .font-semibold{
 	font-weight: 600;
 }
 .font-light{
 	font-weight: 300;
+}
+.font-bold{
+	font-weight: 700;
 }
 .text-primary{
 	--tw-text-opacity: 1;
