--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -548,14 +548,26 @@ video {
 .flex-col{
 	flex-direction: column;
 }
+.content-end{
+	align-content: flex-end;
+}
+.items-end{
+	align-items: flex-end;
+}
 .items-center{
 	align-items: center;
+}
+.justify-end{
+	justify-content: flex-end;
 }
 .justify-center{
 	justify-content: center;
 }
 .justify-between{
 	justify-content: space-between;
+}
+.justify-items-end{
+	justify-items: end;
 }
 .gap-4{
 	gap: 1rem;
@@ -575,6 +587,9 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.justify-self-end{
+	justify-self: end;
 }
 .rounded-3xl{
 	border-radius: 1.5rem;
@@ -648,14 +663,14 @@ video {
 .pt-32{
 	padding-top: 8rem;
 }
+.pt-20{
+	padding-top: 5rem;
+}
 .pt-16{
 	padding-top: 4rem;
 }
 .pt-5{
 	padding-top: 1.25rem;
-}
-.pt-20{
-	padding-top: 5rem;
 }
 .text-left{
 	text-align: left;
@@ -663,13 +678,24 @@ video {
 .text-center{
 	text-align: center;
 }
+.text-right{
+	text-align: right;
+}
 .text-xl{
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
 .text-5xl{
 	font-size: 3rem;
 	line-height: 1;
+}
+.text-2xl{
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 .text-7xl{
 	font-size: 4.5rem;
@@ -678,14 +704,6 @@ video {
 .text-3xl{
 	font-size: 1.875rem;
 	line-height: 2.25rem;
-}
-.text-4xl{
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
-.text-2xl{
-	font-size: 1.5rem;
-	line-height: 2rem;
 }
 .font-semibold{
 	font-weight: 600;
@@ -2302,7 +2320,6 @@ opacity: 0.5;
     to {transform: translateX(200px);}
 
   }
-<<<<<<< Updated upstream
 .Wordpress{
     font-family:'Poppins-Bold',arial, sans-serif ;
     color:transparent; 
@@ -2344,13 +2361,6 @@ opacity: 0.5;
     color:transparent; 
     font-size: 60px;
     margin-left:800px;
-=======
-.Elementor{
-    z-index:-1;
-    margin-Top: 10px;
-    margin-left: 200px;
-    width:400px;
->>>>>>> Stashed changes
     animation-name: elementormove;
     animation-iteration-count: infinite;
     animation-direction:alternate-reverse;
@@ -2389,20 +2399,11 @@ opacity: 0.5;
     to {transform: translateX(40px);}
 
 }
-<<<<<<< Updated upstream
-.Seo{
-    font-family:'Poppins-Bold',arial, sans-serif ;
-    color:transparent; 
-    font-size: 60px;
-  
-    
-=======
 .Shopify{
     z-index:-10; 
     margin-top: 260px;
     margin-left: 780px;  
     width:200px
->>>>>>> Stashed changes
 }
 @supports (-webkit-text-stroke: 2px #86E7FD){
 .Seo{
