--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -508,14 +508,25 @@ video {
 		max-width: 1536px;
 	}
 }
+.sr-only{
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
 .fixed{
 	position: fixed;
 }
 .-left-64{
 	left: -16rem;
 }
-.z-40{
-	z-index: 40;
+.z-30{
+	z-index: 30;
 }
 .col-span-2{
 	grid-column: span 2 / span 2;
@@ -524,17 +535,29 @@ video {
 	margin-left: auto;
 	margin-right: auto;
 }
+.mt-48{
+	margin-top: 12rem;
+}
+.-mt-16{
+	margin-top: -4rem;
+}
+.mt-5{
+	margin-top: 1.25rem;
+}
 .flex{
 	display: flex;
+}
+.inline-flex{
+	display: inline-flex;
 }
 .grid{
 	display: grid;
 }
-.hidden{
-	display: none;
-}
 .h-6{
 	height: 1.5rem;
+}
+.w-full{
+	width: 100%;
 }
 .w-6{
 	width: 1.5rem;
@@ -542,8 +565,14 @@ video {
 .w-64{
 	width: 16rem;
 }
-.max-w-6xl{
-	max-width: 72rem;
+.max-w-7xl{
+	max-width: 80rem;
+}
+.flex-none{
+	flex: none;
+}
+.grid-cols-1{
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col{
 	flex-direction: column;
@@ -575,18 +604,18 @@ video {
 .gap-3{
 	gap: 0.75rem;
 }
-.gap-8{
-	gap: 2rem;
+.gap-0{
+	gap: 0px;
 }
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
+.space-x-1 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
-	margin-right: calc(1rem * var(--tw-space-x-reverse));
-	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
-	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .justify-self-end{
 	justify-self: end;
@@ -631,29 +660,33 @@ video {
 	padding-left: 4rem;
 	padding-right: 4rem;
 }
-.px-4{
-	padding-left: 1rem;
-	padding-right: 1rem;
-}
 .px-2{
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
+}
+.py-0{
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 .px-3{
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
-.py-10{
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
+.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.py-56{
+	padding-top: 14rem;
+	padding-bottom: 14rem;
 }
 .px-20{
 	padding-left: 5rem;
 	padding-right: 5rem;
 }
-.py-56{
-	padding-top: 14rem;
-	padding-bottom: 14rem;
+.py-10{
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
 }
 .pt-10{
 	padding-top: 2.5rem;
@@ -664,11 +697,14 @@ video {
 .pl-36{
 	padding-left: 9rem;
 }
-.pt-32{
-	padding-top: 8rem;
-}
 .pt-20{
 	padding-top: 5rem;
+}
+.pt-8{
+	padding-top: 2rem;
+}
+.pt-32{
+	padding-top: 8rem;
 }
 .pt-16{
 	padding-top: 4rem;
@@ -689,37 +725,37 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-4xl{
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
 .text-5xl{
 	font-size: 3rem;
 	line-height: 1;
+}
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .text-2xl{
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-7xl{
-	font-size: 4.5rem;
-	line-height: 1;
-}
 .text-3xl{
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
+.text-7xl{
+	font-size: 4.5rem;
+	line-height: 1;
+}
 .font-semibold{
 	font-weight: 600;
+}
+.font-extrabold{
+	font-weight: 800;
 }
 .font-light{
 	font-weight: 300;
 }
 .font-bold{
 	font-weight: 700;
-}
-.font-extrabold{
-	font-weight: 800;
 }
 .text-primary{
 	--tw-text-opacity: 1;
@@ -729,10 +765,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-gray-500{
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
 .text-secondary{
 	--tw-text-opacity: 1;
 	color: rgba(134, 231, 253, var(--tw-text-opacity));
@@ -740,10 +772,6 @@ video {
 .shadow-xl{
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.outline-none{
-	outline: 2px solid transparent;
-	outline-offset: 2px;
 }
 .tippy-box[data-placement^=top]>.tippy-svg-arrow{bottom:0}
 .tippy-box[data-placement^=top]>.tippy-svg-arrow:after,.tippy-box[data-placement^=top]>.tippy-svg-arrow>svg{top:16px;transform:rotate(180deg)}
@@ -2516,19 +2544,27 @@ h2{
     font-family:'Poppins-SemiBold';
     src: url('./../Font/Poppins-SemiBold.ttf') format('truetype');
     }
-.hover\:text-primary:hover{
-	--tw-text-opacity: 1;
-	color: rgba(0, 64, 255, var(--tw-text-opacity));
+@media (min-width: 640px){
+	.sm\:px-4{
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 }
 @media (min-width: 768px){
 	.md\:flex{
 		display: flex;
+	}
+	.md\:inline-flex{
+		display: inline-flex;
 	}
 	.md\:hidden{
 		display: none;
 	}
 	.md\:grid-cols-4{
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+	.md\:grid-cols-2{
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 	.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
