--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -184,6 +184,16 @@ color:#0040FF;
     margin-left: 70px;
     
 }
+.navbar {
+  transition: all 330ms ease-out;
+}
+
+.navbar-open {
+  transform: translateX(0%);
+}
+.navbar-close {
+  transform: translateX(-100%);
+}
 
 
 .header-website{
@@ -204,7 +214,7 @@ color:#0040FF;
 
 .grow{
     width:50%;
-    margin-left: 50%;
+    margin-left: 25%;
 }
 
 .line-color-change{
@@ -259,3 +269,145 @@ h2{
     font-family:'Poppins-SemiBold';
     src: url('./../Font/Poppins-SemiBold.ttf') format('truetype');
     } 
+
+
+    html, body {
+        overflow-x: hidden;
+        height: auto;
+    }
+   
+    .mainInner{
+        display: table;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+    }
+    .mainInner div{
+        display:table-cell;
+        vertical-align: middle;
+        font-size: 3em;
+        font-weight: bold;
+        letter-spacing: 1.25px;
+    }
+    #sidebarMenu {
+        height: 100%;
+        position: fixed;
+        right: 0%;
+        width: 42%;
+        padding-top: 70px;
+        z-index: 30;
+        /* margin-top: 60px; */
+        transform: translateX(250px);
+        transition: transform 250ms ease-in-out;
+        background: #0040FF;
+    }
+    .sidebarMenuInner{
+        margin:0;
+        text-align: center;
+        padding:0;
+        /* width: 70%; */
+        border-left: 1px solid rgba(255, 255, 255, 0.10);
+    }
+    .sidebarMenuInner li{
+        list-style: none;
+        color: white;
+        /* text-transform: uppercase; */
+        font-weight: bold;
+        padding: 10px;
+        cursor: pointer;
+        /* border-bottom: 1px solid rgba(255, 255, 255, 0.10); */
+    }
+    .sidebarMenuInner li span{
+        display: block;
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.50);
+    }
+    .sidebarMenuInner li a{
+        color: #fff;
+        /* text-transform: uppercase; */
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    input[type="checkbox"]:checked ~ #sidebarMenu {
+        transform: translateX(0);
+    }
+    
+    input[type=checkbox] {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        display: none;
+    }
+    .sidebarIconToggle{
+        background-color: white !important;
+        padding: 10px;
+        height: 40px !important;
+        width: 40px !important;
+        color: #0040FF !important;
+        border-radius: 10px !important;
+    }
+    .sidebarIconToggle {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        cursor: pointer;
+        /* background-color: white !important;
+        padding: 10px; */
+        position: fixed;
+        z-index: 99;
+        height: 100%;
+        width: 100%;
+        top: 22px;
+        right: 30px;
+        height: 22px;
+        width: 22px;
+    }
+    .spinner {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background-color: #0040FF;
+    }
+    .horizontal {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        position: relative;
+        float: left;
+        margin-top: 3px;
+    }
+    .diagonal.part-1 {
+        position: relative;
+        transition: all 0.3s;
+        box-sizing: border-box;
+        float: left;
+    }
+    .diagonal.part-2 {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        position: relative;
+        float: left;
+        margin-top: 3px;
+    }
+    input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        opacity: 0;
+    }
+    input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        transform: rotate(135deg);
+        margin-top: 8px;
+    }
+    input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
+        transition: all 0.3s;
+        box-sizing: border-box;
+        transform: rotate(-135deg);
+        margin-top: -9px;
+    }
+    .title-resp{
+        color: white !important;
+        font-weight: bold;
+        font-size: 18px !important;
+    }
