--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -411,3 +411,7 @@ h2{
         font-weight: bold;
         font-size: 18px !important;
     }
+    .title-resp2{
+        font-size: 21px !important;
+        transition: all 0.5s  ease-in-out;
+    }
