--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,8 +2,16 @@
     background-image: url('../assets/img/BackgroundStory.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    height:1200px;
+    /* height:00px; */
    z-index:-10;
+}
+.background{
+    background-image: url('../assets/img/advantage.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* height:00px; */
+   /* z-index:-10; */
+   background-position: top 25px right 100px;
 }
 
 
